Otro avance mas, login y registro completo

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -61,6 +61,13 @@
             <version>7.0.5.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
+
+
     </dependencies>
 
 
