--- a/desktop/pom.xml
+++ b/desktop/pom.xml
@@ -74,6 +74,14 @@
       <artifactId>gson</artifactId>
       <version>2.10.1</version>
     </dependency>
+
+    <dependency>
+      <groupId>io.github.cdimascio</groupId>
+      <artifactId>java-dotenv</artifactId>
+      <version>5.2.2</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
