--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -89,6 +89,12 @@
             <version>1.9.23</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.17.1</version>
+        </dependency>
+        
     </dependencies>
 
 
