--- a/desktop/pom.xml
+++ b/desktop/pom.xml
@@ -81,6 +81,11 @@
       <version>5.2.2</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.github.librepdf</groupId>
+      <artifactId>openpdf</artifactId>
+      <version>1.3.30</version>
+    </dependency>
 
   </dependencies>
 
