--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,7 +14,9 @@ FROM eclipse-temurin:21
 
 WORKDIR /app
 
-COPY --from=build /app/target/backend-1.0-SNAPSHOT.jar app.jar
+#COPY --from=build /app/target/backend-1.0-SNAPSHOT.jar app.jar
+COPY --from=build /app/target/app.jar app.jar
+
 
 EXPOSE 7000
 
