--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,23 +1,23 @@
-# Usa una imagen oficial con Java 21 y Maven
+
 FROM maven:3.9.6-eclipse-temurin-21 AS build
 
 WORKDIR /app
 
-# Copia todo el proyecto
-COPY . .
 
-# Compila el proyecto
+COPY pom.xml .
+
+RUN mvn dependency:go-offline -B
+
+COPY src ./src
+
 RUN mvn clean package -DskipTests
 RUN echo "En target:" && ls -la target/
 
-# Imagen final
 FROM eclipse-temurin:21
 
 WORKDIR /app
 
-#COPY --from=build /app/target/backend-1.0-SNAPSHOT.jar app.jar
 COPY --from=build /app/target/app.jar app.jar
-
 
 EXPOSE 7000
 
