--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,15 +2,7 @@
 FROM maven:3.9.6-eclipse-temurin-21 AS build
 
 WORKDIR /app
-
-# Copy pom.xml and download dependencies
-COPY pom.xml .
-RUN mvn dependency:go-offline -B
-
-# Copy source code
-COPY src ./src
-
-# Build the application
+COPY . .
 RUN mvn clean package -DskipTests -B
 
 # Runtime stage
@@ -18,10 +10,10 @@ FROM eclipse-temurin:21-jre
 
 WORKDIR /app
 
-# Copy the JAR with dependencies (shade plugin output)
-COPY --from=build /app/target/app.jar app.jar
+# Copy the original JAR (forget about the name change for now)
+COPY --from=build /app/target/backend-1.0-SNAPSHOT.jar app.jar
 
 EXPOSE 7000
 
-# Run the application
-CMD ["java", "-jar", "app.jar"]
+# Use ENTRYPOINT instead of CMD
+ENTRYPOINT ["java", "-jar", "app.jar"]
