Fixed en railway.toml

--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -1,5 +1,6 @@
 [build]
 builder = "dockerfile"
+context = "backend"            # <--- esta línea le indica a Railway que use /backend
 dockerfilePath = "Dockerfile"
 
 [deploy]
