--- a/railway.toml
+++ b/railway.toml
@@ -1,5 +1,5 @@
 [build]
-builder = "dockerfile"
+builder = "Dockerfile"
 context = "backend"            # <--- esta línea le indica a Railway que use /backend
 dockerfilePath = "Dockerfile"
 
