--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,19 +1,11 @@
-# Build stage
+# Etapa de build
 FROM maven:3.9.6-eclipse-temurin-21 AS build
-
 WORKDIR /app
-COPY . .
+COPY . .                      
 RUN mvn clean package -DskipTests -B
 
-# Runtime stage
+# Etapa de runtime
 FROM eclipse-temurin:21-jre
-
 WORKDIR /app
-
-# Copy the original JAR (forget about the name change for now)
-COPY --from=build /app/target/backend-1.0-SNAPSHOT.jar app.jar
-
-EXPOSE 7000
-
-# Use ENTRYPOINT instead of CMD
-ENTRYPOINT ["java", "-jar", "app.jar"]
+COPY --from=build /app/target/*.jar app.jar
+CMD ["java", "-jar", "app.jar"]
