--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,15 @@
-# Etapa de build
+# Etapa de construcción
 FROM maven:3.9.6-eclipse-temurin-21 AS build
 WORKDIR /app
-COPY . .                      
+COPY . .
 RUN mvn clean package -DskipTests -B
 
-# Etapa de runtime
+# Etapa de ejecución
 FROM eclipse-temurin:21-jre
 WORKDIR /app
 COPY --from=build /app/target/*.jar app.jar
+
+# Expone el puerto esperado por Railway
+EXPOSE 7000
+
 CMD ["java", "-jar", "app.jar"]
